<resources>
    <string name="app_name">SawitKu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_250">250</string>
    <string name="jumlah_petani_wilayah">Jumlah Petani Wilayah</string>
    <string name="update_terakhir_25_okt_2024">Update Terakhir: 25 Okt 2024</string>
    <string name="_1_250_ha">1,250 Ha</string>
    <string name="total_lahan_terdata">Total Lahan Terdata</string>
    <string name="riau">Riau</string>
    <string name="wilayah">Wilayah:</string>
    <string name="jangan_lupa_laporkan_lahan_bulan_ini">Jangan lupa laporkan lahan bulan ini!</string>
    <string name="lahan">Lahan</string>
    <string name="komunitas">Komunitas</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="berita_sawit">Berita Sawit</string>
    <string name="todo3">TODO</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="todo4">TODO</string>
    <string name="akun">Akun</string>
    <string name="title_activity_dashboard_petani">activity_dashboard_petani</string>
    <string name="title_activity_dashboard_konsultan">DashboardKonsultanActivity</string>
    <string name="openweather_api_key">deb4b6298cf64cf28c88e7c64fdd84d0</string>

</resources>